hasjob/static/sass/_header.sass
body
  font-family: $font-default
  background: #e8e7e6 image-url("canvas.jpg")

header
  margin-bottom: 0
  min-height: 62px

  h1
    color: $color-title-has
    font-size: 16px
    margin-top: 10px
    margin-bottom: 10px
    small
      display: inline-block
      color: $color-title-geek
      font-size: 70%
      font-weight: bold

    a, a:hover, a:focus, a:active, a:visited
      color: inherit
      text-decoration: none
      border-bottom: none

    a:hover, a:focus, a:active
      // background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 8px, $color-title-jobs 8px, $color-title-jobs 13px, rgba(0, 0, 0, 0) 13px)
      background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 12%, $color-title-jobs 12%, $color-title-jobs 23%, rgba(0, 0, 0, 0) 23%)

  #hgnav
    background: #ebe7e4
    border-bottom: 1px solid rgba(0,0,0,0.1)
    +box-shadow(0 1px 5px $color-shadow)
    min-height: 62px

    .hg-header-app-nav
      max-width: 58%
      overflow: hidden

      h1 a, h1 a small
        display: block
        overflow: hidden
        text-overflow: ellipsis
        white-space: nowrap

    .board-caption
      position: absolute
      left: 15px
      right: 15px

    .board-caption h1 a
      width: 100%
      overflow: hidden
      text-overflow: ellipsis
      white-space: nowrap
      background-image: none

    h1
      margin: 0
    
    .hg-site-nav
      position: fixed
      top: 35px
      bottom: 0
      left: 0
      margin: 0
      max-height: 100%
      background: #ebe7e4

    .fa
      width: 14px //same as font-size

#page-header
  border-bottom: none

#logo
  +replace-text-with-dimensions('logo-star.png')

.header-section
  padding: 10px 0 5px

  label
    font-weight: normal
    font-size: 14px

  .btn
    text-align: left
    padding: 6px 0
    border: 1px solid #ccc
    font-size: 14px
    border-radius: 3px
    text-overflow: ellipsis
 
    .multiselect-selected-text
      padding-left: 10px //Left padding remains same for longer text

  .btn:hover
    border: 1px solid #adadad

  .pay-field
    padding-left: 10px //Left padding remains same for longer text

  .submit-btn
    padding: 6px 10px
    display: block

    i
      margin-right: 5px

  .filter-select
    width: 100%
    padding-left: 10px
    font-size: 14px
    height: auto
    border-radius: 3px

  .dropdown-menu > li > a:hover
    background-color: #f5f5f5

  .dropdown-menu > .active > a
    color: #333
    background-color: inherit

  ul.multiselect-container
    overflow: auto
    width: 100%
    padding: 5px 0
    left: 0

  .multiselect-container label.checkbox, .multiselect-container label.radio
    padding: 5px 0 5px 30px
    width: 100%

.filters
  margin-bottom: 5px
  ul.dropdown-menu
    max-height: 68vh

.submit-filters
  margin: 1px 10px 5px 0
  padding-right: 0
  width: auto

.cancel-filters
  margin: 1px 0 5px
  padding: 0

.pay-filter-dropdown 
  width: 100%
  padding: 5px 0
  margin-top: 0
  left: 0

  li
    padding: 5px 10px

.currency-checkbox
  float: left
  width: 25%

.equity-label
  width: 100%
  cursor: pointer

.pay-filter-slider
  margin: 5px auto

.pay-filter-slider .noUi-horizontal
  padding-right: 32px

.pay-filter-slider .noUi-horizontal .noUi-handle
  left: -1px

.pay-filter-slider .noUi-horizontal .noUi-origin
  right: -32px

.job-filter-location-search-clear
  cursor: pointer

@media (min-width: 480px)
  header #hgnav .hg-header-app-nav
    max-width: 70%

@media (min-width: 768px)
  header
    margin-bottom: 110px
    min-height: 36px

    h1
      font-size: 25px
    
    h1 small
      display: inline

    #hgnav 
      min-height: 0

      .hg-header-app-nav
        max-width: 83%

      .board-caption
        position: static

      .hg-header-app-nav h1 a small
        display: inline

      .hg-site-nav
        clear: both
        margin: 0
        position: relative
        top: 0
        width: 100%
        max-height: auto

      .hg-site-nav-toggle
        display: none

  .header-section ul.multiselect-container
    width: 20em

  .header-section .pay-filter-dropdown
    width: 135%
    left: 0
    right: auto

@media (min-width: 768px) and (max-width: 991px)
  .category-filter ul.multiselect-container
    right: 0
    left: auto
    
@media (min-width: 992px) and (max-width: 1199px)
  .header-section .pay-filter-dropdown
    right: 0
    left: auto

@media (min-width: 1200px)
  header
    margin-bottom: 70px

    #hgnav .hg-header-app-nav
      max-width: 90%

  .header-section
    padding-bottom: 4px

    .submit-btn
      text-align: center
      padding: 6px 0
      width: 100%
      margin-top: -2px

  .filters
    padding: 0 10px 0 0
    width: 19.8%

  .filters-col1
    padding-left: 15px 

  .submit-filters
    width: 6.2%
    padding: 0

// customize nprogress bar
#nprogress .bar
  background: $color-title-has

#nprogress .peg
  box-shadow: 0 0 10px $color-title-has,0 0 5px $color-title-has

